tests/ui/coherence/normalize-for-errors.current.stderr
error[E0119]: conflicting implementations of trait `MyTrait` for type `Box<(MyType,)>`
  --> $DIR/normalize-for-errors.rs:17:1
   |
LL | impl<T: Copy> MyTrait for T {}
   | --------------------------- first implementation here
LL |
LL | impl MyTrait for Box<<(MyType,) as Mirror>::Assoc> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Box<(MyType,)>`
   |
   = note: upstream crates may add a new impl of trait `std::marker::Copy` for type `std::boxed::Box<(MyType,)>` in future versions

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
